# Darkwave-engine

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/shaders/: triangle.vert
src/: main.cpp
src/core/: Input.cpp  Input.h  Time.cpp  Time.h
src/engine/: Engine.cpp  Engine.h
src/game/: CameraFPS.cpp  CameraFPS.h  Collision.h  Player.cpp  Player.h
src/math/: Mat4.h  Vec3.h
src/platform/: WindowSDL.cpp  WindowSDL.h
src/renderer/: Renderer.cpp  Renderer.h  Swapchain.cpp  Swapchain.h  VulkanContext.cpp  VulkanContext.h  vcpkg.json
